# lumen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dexter.config.ts  eslint.config.ts  install.sh  package.json  tsconfig.json
.agents/skills/markdown/: SKILL.md
.agents/skills/policy/: SKILL.md
.agents/skills/publish/: SKILL.md
.agents/skills/readme-md/: SKILL.md
.agents/skills/review/: SKILL.md
.claude/: settings.json
.claude/skills/lumen-file/: SKILL.md
.claude/skills/markdown/: SKILL.md
.claude/skills/review/: SKILL.md
.codex/: config.toml
.github/workflows/: publish-vscode.yml
apps/pipelines/: CLAUDE.md  README.md  app.py  package.json  pyproject.toml
apps/pipelines/pipelines/: __init__.py  echo.py  flux_realism.py  flux_uncensored.py  poses.py  txt2img.py  types.py
apps/pipelines/tests/: test_api.py
apps/vscode/: CLAUDE.md  README.md  dev.ts  package.json  tsconfig.json  tsconfig.webview.json  vite.config.ts
apps/vscode/shared/: types.ts
apps/vscode/src/: api.ts  (+3 more)
meta/: eslint.config.js  index.ts  package.json  run
meta/commands/: package.json  release.ts
meta/config/: package.json
templates/default/: AGENTS.md  CLAUDE.md  doctor.sh  doctor.test.ts
templates/default/server/: .gitignore  AGENTS.md  conftest.py  pyproject.toml
templates/default/server/lumen_server/: __init__.py  auth.py  modal_app.py
templates/default/server/pipelines/: __init__.py  _fal.py  _template.py  echo.py  fal_nano_banana.py  fal_nano_banana_2.py  fal_nano_banana_pro.py  z_image_turbo.py
templates/default/server/tests/: __init__.py  test_api.py
(+74 files in other folders)
