[project]
name = "modal-pipelines"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.27.0",
    "diffusers>=0.27.0",
    "fastapi>=0.115.0",
    "modal>=0.73.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
