[project]
name = "lumen-example-modal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lumen-sdk",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
lumen-sdk = { path = "../../../packages/lumen-sdk", editable = true }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
